objects/SpellAssign__c/SpellAssign__c.object-meta.xml
<CustomObject>
    <label>Spell Assign</label>
    <nameField>
        <label>SpellAssign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Spell Assigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>