objects/SpellAssign__c/fields/Drain__c.field-meta.xml
<CustomField>
    <fullName>Drain__c</fullName>
    <label>Drain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>