objects/SpellAssign__c/fields/SpellTemplateId__c.field-meta.xml
<CustomField>
    <fullName>SpellTemplateId__c</fullName>
    <label>Spell Template Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>