objects/SpellAssign__c/fields/SRcharacter__c.field-meta.xml
<CustomField>
    <fullName>SRcharacter__c</fullName>
    <label>SRcharacter</label>
    <referenceTo>SRcharacter__c</referenceTo>
    <relationshipLabel>Spell Assigns</relationshipLabel>
    <relationshipName>Spell_Assigns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>